fixed navbar issue crossing from contact to index where headers overlapped with headers

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -319,7 +319,7 @@ footer p {
         flex-direction: column;
     }
     #about p {
-        text-align: center;
+        text-align: left;
         margin-right: 20px;
     }
 
